# 2019-FreshTutorial

./: ReadMe.md
abi/: CMakeLists.txt  build.bat  main.cpp
abi/build-gcc/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  rules.ninja
cmake-tutorial/s0-CreateAnExecutible/: CMakeLists.txt  ReadMe.md  build.bat  main.cpp
cmake-tutorial/s1-CreateADialog/: CMakeLists.txt  ReadMe.md  main.cpp  widget_helloworld.cpp  widget_helloworld.h  widget_helloworld_zh_CN.ts
cmake-tutorial/s2-CreateLib/: CMakeLists.txt  ReadMe.md
cmake-tutorial/s2-CreateLib/src/: CMakeLists.txt
cmake-tutorial/s2-CreateLib/src/main/: widget_helloworld.cpp  widget_helloworld.ui
cmake-tutorial/s2-CreateLib/src/mymath/: CMakeLists.txt  mymath.cpp  mymath.h
cmake-tutorial/s3-CreateFindPackage/: CMakeLists.txt  ReadMe.md
cmake-tutorial/s3-CreateFindPackage/cmake/: FindEigen3.cmake
cmake-tutorial/s3-CreateFindPackage/src/main/: CMakeLists.txt  widget_helloworld.cpp  widget_helloworld.h  widget_helloworld.qrc  widget_helloworld_zh_CN.ts
cmake-tutorial/s3-CreateFindPackage/src/mymath/: CMakeLists.txt  mymath.cpp  mymath.h
osketch-tutorial/: load_osketch.rb
osketch-tutorial/oksetchpro_plugin_helloworld/: CMakeLists.txt  OSketchProPluginHelloWorld_zh_CN.ts  osketchpro_plugin_helloworld.cpp  osketchpro_plugin_helloworld.h  osketchpro_plugin_helloworld.qrc  tool_area.cpp  tool_area.h  widget_hello_world.cpp  widget_hello_world.h  widget_hello_world.ui
